--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -223,6 +223,7 @@ table {
   --section-page-information-card-bg-color:var(--background-third-color);
   --section-subscribe-bg-color: var(--foreground-color);
   --footer-inside-border: #D0D0D0;
+  --checkout-cart-border-color:#CDCDCD;
 }
 @media (prefers-color-scheme: dark) {
   :root {
@@ -1713,4 +1714,62 @@ body {
   align-items: start;
   justify-items: start;
   gap: 0;
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.wrapper-billing-details-form {
+  justify-self: stretch;
+  margin-bottom: 7.5rem;
+}
+
+.form-label {
+  margin: 1.875rem 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 0.625rem;
+}
+
+.wrapper-additional-information-form {
+  justify-self: stretch;
+}
+
+.wrapper-checkout-cart-total {
+  width: 100%;
+  grid-column: span 2;
+  border-bottom: 1px solid var(--checkout-cart-border-color);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  align-items: start;
+  justify-items: start;
+  gap: 1.875rem;
+}
+.wrapper-checkout-cart-total__container-price {
+  width: 100%;
+  border-top: 1px solid var(--checkout-cart-border-color);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: start;
+  gap: 0;
+}
+
+.form-payment-options {
+  grid-column: span 2;
+  margin: 1.875rem 0;
+}
+
+.form-label-radio {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.938rem;
+  margin: 1.25rem 0;
 }/*# sourceMappingURL=main.css.map */
