finish contact page, favicon.correct links

--- a/project/styles/components/_links.scss
+++ b/project/styles/components/_links.scss
@@ -28,4 +28,9 @@
     &--underline-border-secondary-color{
         border-color: var(--link-secondary-color);
     }
+
+    &--not-active{
+        pointer-events: none;
+            cursor: not-allowed;
+    }
 }
