--- a/project/styles/layout/_index.scss
+++ b/project/styles/layout/_index.scss
@@ -10,3 +10,4 @@
 @forward './section-page-information-card';
 @forward './section-switcher-type-selling-items';
 @forward './section-selling-item-main-information';
+@forward './section-contacts';
